Updated Maven Plug in versions to latests