@@ -17,23 +17,21 @@
     </modules>
 
     <properties>
-        <defaultArg>-Xmx1024m -XX:MaxPermSize=256m -Xverify:none</defaultArg>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.release>8</maven.compiler.release>
     </properties>
 
     <scm>
-        <connection>scm:git:git@github.corp.ebay.com</connection>
-        <developerConnection>scm:git:git@github.corp.ebay.com</developerConnection>
-        <url>git@github.corp.ebay.com</url>
+        <connection>scm:git:git@github.com:eBay/ejmask.git</connection>
+        <url>https://github.com/eBay/ejmask</url>
     </scm>
 
     <developers>
         <developer>
             <name>Prasanth Kaimattil Venu</name>
             <organization>ebay</organization>
-            <organizationUrl>http://www.ebay.com/</organizationUrl>
+            <organizationUrl>http://www.ebay.com</organizationUrl>
         </developer>
     </developers>
 
@@ -104,31 +102,22 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <release>${maven.compiler.release}</release>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.8</version>
+                <version>3.10.1</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M5</version>
+                <version>3.0.0-M8</version>
                 <configuration>
                     <systemPropertyVariables>
                         <jacoco-agent.destfile>target/jacoco.exec</jacoco-agent.destfile>
                     </systemPropertyVariables>
-                    <argLine>-Xverify:none -Xmx1024m -XX:MaxPermSize=512m</argLine>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
-                <version>3.2.0</version>
+                <version>3.3.0</version>
                 <executions>
                     <execution>
                         <id>add-integration-test-source-as-test-sources</id>
@@ -163,7 +152,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>3.0.0-M6</version>
+                <version>3.0.0-M8</version>
                 <configuration>
                     <forkCount>2</forkCount>
                     <reuseForks>false</reuseForks>
